<resources>
    <string name="app_name">Game Rater</string>
    <string name="greeting">Welcome to Game Rater!</string>
    <string name="instruct">Fill out the info below to rate a game of your choice:</string>
    <string name="genre">Game genre:</string>
    <string name="rpg">RPG</string>
    <string name="fps">FPS</string>
    <string name="strategy">Strategy</string>
    <string name="horror">Horror</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="side_scroll">Side-Scroller</string>
    <string name="rating">Rating:</string>
    <string name="submit">SUBMIT</string>
    <string name="new_rating">Add Rating</string>
    <string name="list">Game Ratings:</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
