<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/greet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textSize="20dp"
        android:textColor="@color/colorRed"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/greet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruct"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@color/colorRed"
        android:layout_marginTop="55dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="Game Title"
        android:layout_marginTop="110dp"
        android:textSize="20dp"
        android:width="300dp"
        android:background="@color/colorTint"/>
    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="160dp"
        android:hint="Evaluation"
        android:textSize="20dp"
        android:width="300dp"
        android:background="@color/colorTint"/>
    <TextView
        android:id="@+id/gameGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:textColor="@color/colorRed"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre"
        android:layout_marginTop="225dp"
        android:background="@color/colorTint"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rpg"/>
        <RadioButton
            android:id="@+id/fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:text="@string/fps"/>
        <RadioButton
            android:id="@+id/strategy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textSize="18dp"
            android:text="@string/strategy"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="20dp"
        android:textSize="18dp"
        android:textColor="@color/colorRed"/>
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="355dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/menu_delete"/>

</FrameLayout>
